[INTERNAL][FIX] sap.m.Toolbar: Left padding aligned with specification
Left padding of the sap.m.Toolbar is now aligned in Quartz Dark and
Evening Horizon to look the same as their counterparts.

BCP: 2270180215

--- a/src/themelib_sap_fiori_3/src/sap/m/themes/sap_fiori_3_dark/Toolbar.less
+++ b/src/themelib_sap_fiori_3/src/sap/m/themes/sap_fiori_3_dark/Toolbar.less
@@ -10,18 +10,18 @@ html.sap-desktop .sapMTBActive:focus {
 
 .sapMTB {
 	height: 2.75rem;
-	padding: 0 0.5rem;
+	padding: 0 0.25rem;
 	background: @sapUiToolbarBackground;
 }
 
 /* Transparent Toolbar Context */
 .sapMTB-Transparent-CTX.sapMTB {
-	padding-left: 0.5rem;
+	padding-left: 0.25rem;
 }
 
 /* Info Toolbar Context */
 .sapMIBar.sapMTB.sapMTB-Info-CTX {
-	padding-left: 0.5rem;
+	padding-left: 0.25rem;
 }
 
 /* Solid Toolbar Context */
